syntax = "proto3";
package cellarfees.v1;

import "gogoproto/gogo.proto";

option go_package = "github.com/peggyjv/sommelier/v4/x/cellarfees/types";

// Params defines the parameters for the module.
message Params {
  option (gogoproto.goproto_stringer) = false;

  // The minimum number of blocks between each round of auctions
  uint64 auction_block_delay = 1;
  // Emission rate factor. Specifically, the number of blocks over which to distribute
  // some amount of staking rewards.
  uint64 reward_emission_period = 2;
  // The initial rate at which auctions should decrease their denom's price in SOMM
  string initial_price_decrease_rate = 3
    [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
  // Number of blocks between auction price decreases
  uint64 price_decrease_block_interval = 4;
}
